shesmu-server/src/test/resources/bad/interpolation-list.shesmu
Define standard_execution()
  Where "{[3]}" != "";
